--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - name: delete-task
         env:
           - name: CONNECTION_STRING
-            value: "Driver={ODBC Driver 17 for SQL Server};Server=tcp:devopsinsiderssrv.database.windows.net,1433;Database=todoapp;Uid=devopsadmin;Pwd=P@ssw01rd@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
+            value: "Driver={ODBC Driver 17 for SQL Server};Server=tcp:todo-dbs1.database.windows.net,1433;Database=todoapp-db;Uid=admin01;Pwd=admin@123456;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
         image: devopsinsiders/delete-task
         ports:
         - containerPort: 8000
